--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,7 @@
-doctype html
-html(lang="ko")
-    head
-        title Metube
-    body
-        h1 Edit
-    include partials/footer.pug
+extends base.pug
+
+block head
+    title Edit | Metube 
+
+block content 
+    h1 Edit!
