--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,7 @@
-doctype html
-html(lang="ko")
-    head
-        title Metube
-    body
-        h1 Welcome to Metube
-    include partials/footer.pug
+extends base.pug
+
+block head
+    title Home | Metube
+
+block content
+    h1 Home!
