--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,7 @@
-doctype html
-html(lang="ko")
-    head
-        title Metube
-    body
-        h1 Whatch Video!
-    include partials/footer.pug
+extends base.pug
+
+block head
+    title Watch | Metube
+    
+block content 
+     h1 Watch Video
