--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,6 @@
 extends base.pug
 
-block head
-    title Home | Metube
-
 block content
     h1 Home!
+    input(placeholder="What's your name?")
+    button send
