--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,10 @@
 doctype html
 html(lang="ko")
     head
-        block head
+        title 
+            #{pageTitle} | Metube
+        link(rel ="stylesheet" href="https://unpkg.com/mvp.css")
     body
-        block content
+        main
+            block content
     include partials/footer.pug
