--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,6 +5,18 @@ html(lang="ko")
             #{pageTitle} | Metube
         link(rel ="stylesheet" href="https://unpkg.com/mvp.css")
     body
+        header
+            if fakeUser.loggedIn
+                small Hello #{fakeUser.username}
+            nav
+                ul
+                    if fakeUser.loggedIn 
+                        li 
+                            a(href="/logout") Logout
+                    else
+                        li 
+                            a(href="/login") LogIn
+            h1=pageTitle
         main
             block content
     include partials/footer.pug
