--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,9 +1,10 @@
 extends base.pug
+include mixins/video
 
 block content
     h2 Welcome here you will see the trending videos
     ul
-        each video in videos
-            li=video
-        else 
-            li Sorry nothing found.
+    each mov in videos
+        +video(mov)
+    else 
+        li Sorry nothing found.
