--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,8 +1,7 @@
 doctype html
 html(lang="ko")
     head
-        title 
-            #{pageTitle} | Metube
+        title Metube - #{pageTitle}
         link(rel ="stylesheet" href="https://unpkg.com/mvp.css")
     body
         header
