--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -7,5 +7,7 @@ html(lang="ko")
         header
             h1=pageTitle
         main
+            a(href="/videos/upload") Upload
+
             block content
     include partials/footer.pug
