--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,7 @@ extends base.pug
 include mixins/video
 
 block content
-    h2 Welcome here you will see the trending videos
-    ul
+    head
     each mov in videos
         +video(mov)
     else 
