--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,3 +11,6 @@ block content
         input(placeholder="Confirm Password", name="password2", type="password", required)
         input(placeholder="Location", name="location", type="text", required)
         input(type="submit", value="Join")
+    div 
+        span Already have an account? 
+        a(href="login") Log in now &rarr;
