--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -5,7 +5,7 @@ block content
         span=errorMessage
     form(method="POST")
         input(placeholder="Username", name="username", type="text", required)
-        input(placeholder="Password", name="password1", type="password", required)
+        input(placeholder="Password", name="password", type="password", required)
         input(type="submit", value="Login")
     div 
         span Don't have an account? 
