--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -8,14 +8,17 @@ html(lang="ko")
             h1=pageTitle
             nav
                 ul 
-                    li
-                        a(href="/videos/upload") Upload
                     li 
                         a(href="/") Home
                     li 
-                        a(href="/search") Search
-                    li 
                         a(href="/join") Join
+                    li 
+                        a(href="/login") Login
+                    li 
+                        a(href="/search") Search
+                    li  
+                        a(href="/videos/upload") Upload Video
+
         main
             block content
     include partials/footer.pug
