--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,6 +7,8 @@ block content
         input(placeholder="Username", name="username", type="text", required)
         input(placeholder="Password", name="password", type="password", required)
         input(type="submit", value="Login")
+        br
+        a(href="https://github.com/login/oauth/authorize/?client_id=466cdcd1dc32212bddfb&allow_signup=false") Continue with Github &rarr;
     div 
         span Don't have an account? 
         a(href="/join") Create one now &rarr;
