--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -7,3 +7,7 @@ block content
         input(placeholder="Username", name="username", type="text", required, value=loggedInUser.username)
         input(placeholder="Location", name="location", type="text", required, value=loggedInUser.location)
         input(type="submit", value="Update Profile")
+        hr
+        if !loggedInUser.socialOnly
+            hr
+            a(href="change-password") Change Password &rarr;
