--- a/src/views/users/change-password.pug
+++ b/src/views/users/change-password.pug
@@ -1,8 +1,10 @@
 extends ../base
 
-block content 
+block content
+    if errorMessage
+        span=errorMessage
     form(method="POST")
-         input(placeholder="Old Password")
-         input(placeholder="New Password")
-         input(placeholder="New Password Confirm")
+         input(placeholder="Old Password", type="password" name="oldPassword")
+         input(placeholder="New Password", type="password" name="newPassword")
+         input(placeholder="New Password Confirm", type="password" name="newPasswordConfirmation")
          input(value="Change Password", type="submit")
