--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -4,7 +4,10 @@ block content
      video(src="/"+video.fileUrl, controls)
      div 
           p=video.description
-          small=video.createdAt 
-     a(href=`${video.id}/edit`) Edit video &rarr;
-     br
-     a(href=`${video.id}/delete`) Delete video &rarr;
+          small=video.createdAt
+     div
+          small Uploaded by #{owner.name}
+     if String(video.owner) === String(loggedInUser._id)
+          a(href=`${video.id}/edit`) Edit video &rarr;
+          br
+          a(href=`${video.id}/delete`) Delete video &rarr;
