--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,8 @@ extends base.pug
 include mixins/video
 
 block content
-    head
-    each mov in videos
-        +video(mov)
-    else 
-        li Sorry nothing found.
+    div.video-grid
+        each mov in videos
+            +video(mov)
+        else 
+            span.empty__message No videos found.
