--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,11 +204,70 @@ footer {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.search__form {
-  display: flex;
-  flex-direction: column;
+.auth-switch {
+  text-align: center;
+  margin-top: 40px;
+}
+.auth-switch a {
+  text-decoration: underline;
+}
+
+.avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+form {
   max-width: 420px;
   margin: 0 auto;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+input {
+  all: unset;
+  padding: 15px 20px;
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background-color: black;
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: white;
+  width: 90%;
+}
+input::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+input[type=submit],
+.social__btn {
+  border-radius: 5px;
+  padding: 12px 20px;
+  background-color: #ff1300;
+  text-align: center;
+  cursor: pointer;
+  display: block;
+  max-width: 420px;
+}
+
+.social-login {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding-top: 40px;
+  margin-top: 30px;
+}
+.social-login .social__btn--github {
+  background-color: #24883b;
+}
+
+.search__form {
+  max-width: 420px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+  display: flex;
+  position: relative;
+  align-items: center;
 }
 .search__form input {
   all: unset;
@@ -219,11 +278,48 @@ footer {
   margin-bottom: 5px;
   font-size: 16px;
   color: white;
+  width: 90%;
 }
-.search__form input[type=submit] {
-  background-color: rgba(0, 0, 0, 0.3);
+.search__form button {
+  all: unset;
+}
+.search__form button {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 18px;
+  background-color: rgba(0, 0, 0, 0);
   text-align: center;
-  padding: 10px;
+  cursor: pointer;
+}
+
+.profile__data {
+  max-width: 420px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.profile__data img {
+  margin-bottom: 10px;
+}
+.profile__data h3 {
+  font-size: 18px;
+}
+
+.edit-profile__form {
+  font-size: 14px;
+  margin-bottom: 15px;
+  display: block;
+}
+
+.edit-profile__password {
+  margin-top: 50px;
+  text-align: center;
+}
+.edit-profile__password a {
+  text-decoration: underline;
 }
 
 a {
