--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -1,8 +1,10 @@
 .search__form {
-  display: flex;
-  flex-direction: column;
   max-width: 420px;
   margin: 0 auto;
+  margin-bottom: 60px;
+  display: flex;
+  position: relative;
+  align-items: center;
   input {
     all: unset;
     padding: 15px 20px;
@@ -12,10 +14,18 @@
     margin-bottom: 5px;
     font-size: 16px;
     color: white;
+    width: 90%;
   }
-  input[type="submit"] {
-    background-color: rgba(0, 0, 0, 0.3);
+  button {
+    all: unset;
+  }
+  button {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
-    padding: 10px;
+    cursor: pointer;
   }
 }
