--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,10 +3,10 @@ html(lang="ko")
     head
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css")
-        link(rel="stylesheet" href="static/css/styles.css")
+        link(rel="stylesheet" href="/static/css/styles.css")
     body
         include partials/header
         main
             block content
         include partials/footer.pug
-    script(src="static/js/main.js")
+    script(src="/static/js/main.js")
