--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -4,7 +4,8 @@ include mixins/video
 block content 
     form(method="GET").search__form
         input(placeholder="Search by title", name="keyword", type="text")
-        input(type="submit", value="Seach now")
+        button 
+            i.fas.fa-search 
 
     div.video-grid
         each video in videos
