--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -9,12 +9,16 @@ header
             if loggedIn
                 li  
                     a(href="/videos/upload") Upload Video
-                li
-                    a(href=`/users/${loggedInUser._id}`) My Profile
                 li  
                     a(href="/users/edit") Edit Profile
                 li
                     a(href="/users/logout") Log Out
+                li
+                    a(href=`/users/${loggedInUser._id}`)
+                        if loggedInUser.avatarUrl === ""
+                            span 👀
+                        else
+                            img.header__avatar(src="/" + loggedInUser.avatarUrl)
             else
                 li 
                     a(href="/login") Login
