--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -5,7 +5,7 @@ form {
   background-color: rgba($color: #000000, $alpha: 0.2);
   border-radius: 10px;
 }
-input {
+input:not(input[type="range"]) {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
