--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,8 +5,11 @@ block content
      div 
           button#play Play 
           button#mute Mute 
-          span#time 00:00/00:00
-          input(type="range", step="0.1", min="0", max="1")
+          div 
+               span#currentTime 00:00
+               span   /  
+               span#totalTime 00:00
+          input(type="range", step="0.1", min="0", max="1")#volume
      //-
           div 
                p=video.description
