--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,15 +1,17 @@
 extends base.pug
 
 block content 
-     video(src="/"+video.fileUrl, controls)
+     video(src="/"+video.fileUrl)
      div 
           button#play Play 
           button#mute Mute 
+          input(type="range", step="0.1", min="0", max="1")#volume
           div 
                span#currentTime 00:00
                span   /  
                span#totalTime 00:00
-          input(type="range", step="0.1", min="0", max="1")#volume
+          div
+               input(type="range", step="1", value="0", min="0")#timeline
      //-
           div 
                p=video.description
@@ -23,4 +25,4 @@ block content
                a(href=`${video.id}/delete`) Delete video &rarr;
 
 block scripts
-     script(src="/static/js/videoPlayer.js")
+     script(defer src="/static/js/videoPlayer.js")
