--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,19 +2,23 @@ extends base.pug
 
 block content
      div#videoContainer
-          video(src="/"+video.fileUrl)
-          div#videoControls
-               button#play Play 
-               button#mute Mute 
-               input(type="range", step="0.1", min="0", max="1")#volume
-               div 
-                    span#currentTime 00:00
-                    span   /  
+        video(src="/"+video.fileUrl)
+        div#videoControls.videoControls
+            div.videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                div.videoControls__time
+                    span#currenTime 00:00
+                    span  / 
                     span#totalTime 00:00
-               div
-                    input(type="range", step="1", value="0", min="0")#timeline
-               div
-                    button#fullscreenBtn Enter Full Screen
+            input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+            div.videoControls__volume
+                input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+                span#mute
+                    i.fas.fa-volume-up
+            div
+                span#fullscreen
+                    i.fas.fa-expand
      //-
           div 
                p=video.description
