--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,7 @@
 extends base.pug
 
 block content
-     div#videoContaine(data-id=video._id)        
+     div#videoContainer(data-id=video._id)        
         video(src="/"+video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
