--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,7 +231,8 @@ form {
   border-radius: 10px;
 }
 
-input:not(input[type=range]) {
+input:not(input[type=range]),
+input[type=submit] {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -242,7 +243,8 @@ input:not(input[type=range]) {
   color: white;
   width: 90%;
 }
-input:not(input[type=range])::placeholder {
+input:not(input[type=range])::placeholder,
+input[type=submit]::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
 
@@ -250,11 +252,21 @@ input[type=submit],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  background-color: #ff1300;
-  text-align: center;
+  background-color: white !important;
+  color: #ff1300 !important;
+  text-align: center !important;
   cursor: pointer;
   display: block;
-  max-width: 420px;
+  border: none;
+}
+input[type=submit]:focus,
+.social__btn:focus {
+  outline: none;
+}
+input[type=submit]:disabled,
+.social__btn:disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .social-login {
@@ -373,6 +385,20 @@ input[type=submit],
 }
 .edit-profile__password a {
   text-decoration: underline;
+}
+
+.upload__container {
+  width: 100%;
+}
+.upload__container .upload__video {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.upload__container .upload__video video {
+  max-width: 100%;
+  margin-bottom: 10px;
 }
 
 a {
