--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,7 @@
 extends base.pug
 
 block content
-     div#videoContainer(data-id=video._id)        
+    div#videoContainer(data-id=video._id)        
         video(src="/"+video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
@@ -19,17 +19,21 @@ block content
             div
                 span#fullscreen
                     i.fas.fa-expand
-     //-
-          div 
-               p=video.description
-               small=video.createdAt
-          div
-               small Uploaded by 
-                    a(href=`/users/${video.owner._id}`) #{video.owner.name}
-          if String(video.owner._id) === String(loggedInUser._id)
-               a(href=`${video.id}/edit`) Edit video &rarr;
-               br
-               a(href=`${video.id}/delete`) Delete video &rarr;
-
+    //-
+        div 
+            p=video.description
+            small=video.createdAt
+        div
+            small Uploaded by 
+                a(href=`/users/${video.owner._id}`) #{video.owner.name}
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit video &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete video &rarr;
+    div.video__comments
+        form.video__comment-form#commentForm
+            textarea(cols = "30", rows="10", placeholder="Write a nice comment :)")
+            button Add Comment
 block scripts
-     script(defer src="/static/js/videoPlayer.js")
+    script(defer src="/static/js/videoPlayer.js")
+    script(defer src="/static/js/commentSection.js")
