--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -30,10 +30,12 @@ block content
             a(href=`${video.id}/edit`) Edit video &rarr;
             br
             a(href=`${video.id}/delete`) Delete video &rarr;
-    div.video__comments
-        form.video__comment-form#commentForm
-            textarea(cols = "30", rows="10", placeholder="Write a nice comment :)")
-            button Add Comment
+    if loggedIn
+        div.video__comments
+            form.video__comment-form#commentForm
+                textarea(cols = "30", rows="10", placeholder="Write a nice comment :)")
+                button Add Comment
 block scripts
     script(defer src="/static/js/videoPlayer.js")
-    script(defer src="/static/js/commentSection.js")
+    if loggedIn
+        script(defer src="/static/js/commentSection.js")
