--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -19,22 +19,29 @@ block content
             div
                 span#fullscreen
                     i.fas.fa-expand
-    //-
-        div 
-            p=video.description
-            small=video.createdAt
-        div
-            small Uploaded by 
-                a(href=`/users/${video.owner._id}`) #{video.owner.name}
+    
+    div.video__data
+        p.video__title=video.title
+        small.video__owner Uploaded by 
+            a(href=`/users/${video.owner._id}`) #{video.owner.name}
+        small.video__createdAt=video.createdAt = new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
+    
         if String(video.owner._id) === String(loggedInUser._id)
             a(href=`${video.id}/edit`) Edit video &rarr;
             br
             a(href=`${video.id}/delete`) Delete video &rarr;
     if loggedIn
-        div.video__comments
+        div.video__add-comments
             form.video__comment-form#commentForm
                 textarea(cols = "30", rows="10", placeholder="Write a nice comment :)")
                 button Add Comment
+    .video__comments
+        ul 
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment
+                    |  #{comment.text} 
+
 block scripts
     script(defer src="/static/js/videoPlayer.js")
     if loggedIn
