--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -40,7 +40,7 @@ block content
             each comment in video.comments.reverse()
                 li.video__comment
                     i.fas.fa-comment
-                    |  #{comment.text} 
+                    span #{comment.text} 
 
 block scripts
     script(defer src="/static/js/videoPlayer.js")
