--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -3,7 +3,7 @@ include ../mixins/video
 
 block content
     div.profile__data
-        img.avatar(src=user.avatarUrl)
+        img.avatar(src=user.avatarUrl crossorigin)
         h3=user.name
     div.video-grid
         each video in user.videos 
