--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -15,8 +15,8 @@ header
                     a(href="/users/logout") Log Out
                 li
                     a(href=`/users/${loggedInUser._id}`)
-                        if loggedInUser.avatarUrl === ""
-                            span 👀
+                        if loggedInUser.avatarUrl === undefined
+                            i.fas.fa-circle-question
                         else
                             if loggedInUser.avatarUrl.includes("github")
                                 img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
