--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -4,7 +4,7 @@ header {
   justify-content: space-between;
   align-items: center;
   .header__logo {
-    color: $red;
+    color: #ffccff;
     font-size: 38px;
   }
   ul {
