--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -25,9 +25,8 @@ a {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: $bg;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #660099;
   color: white;
 }
 
