--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -13,7 +13,7 @@
     background-color: black;
     margin-bottom: 5px;
     font-size: 16px;
-    color: white;
+    color: #cc3366;
     width: 90%;
   }
   button {
@@ -21,8 +21,6 @@
   }
   button {
     position: absolute;
-    right: 15px;
-    top: 15px;
     font-size: 18px;
     background-color: rgba(0, 0, 0, 0);
     text-align: center;
