--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -29,7 +29,7 @@
       padding: 10px;
       border-radius: 9999px;
       background-color: white;
-      color: black;
+      color: #cc3366;
       margin-bottom: 10px;
     }
   }
