all scss modification2

--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -18,9 +18,8 @@
   }
   button {
     all: unset;
-  }
-  button {
     position: absolute;
+    right: 15px;
     font-size: 18px;
     background-color: rgba(0, 0, 0, 0);
     text-align: center;
