--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -27,7 +27,7 @@ a {
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #660099;
-  color: #cc3366;
+  color: white;
 }
 
 main {
