--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -24,7 +24,7 @@ input[type="submit"],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  background-color: #cc3366 !important;
+  background-color: white !important;
   color: rgba($color: $red, $alpha: 1) !important;
   text-align: center !important;
   cursor: pointer;
